--- a/pages/about.html
+++ b/pages/about.html
@@ -1,110 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About us</title>
-  <link rel="stylesheet" href="../style.css" />
-</head>
-<body>
-  <header>
-    <nav>
-      <div id="coDet">
-        <a href="./index.html">
-          <img id="logo" src="./images/Logo.png" alt="logo depicting Africa with a bite out of it" width="75px">
-        </a>
-        <p>A Bite of Africa</p>
-      </div>
-       <div class="navList">
-          <a href="./pages/about.html">About Us</a>
-          <a href="./pages/products.html">Pastry Shop</a>
-          <a href="./pages/blog.html">Pastry Blog </a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About us</title>
+    <link rel="stylesheet" href="../style.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div id="coDet">
+          <a href="./index.html">
+            <img id="logo" src="./images/Logo.png" alt="logo depicting Africa with a bite out of it" width="75px" />
+          </a>
+          <p>A Bite of Africa</p>
+        </div>
+        <div class="navList">
+          <a href="./about.html">About Us</a>
+          <a href="./products.html">Pastry Shop</a>
+          <a href="./blog.html">Pastry Blog </a>
           <a href="#">Contact Us</a>
         </div>
-    </nav>
-    <div class="sec1">
-      <div class="htext">
-        <h1 class="hmain">About us</h1>
-        <p class="hsec">
-          Welcome to Africulinary Delights, your ultimate destination for authentic African
-          pastries crafted with passion and expertise. We take immense pride in curating a
-          delectable assortment of pastries, working hand-in-hand with the world's top chefs
-          who infuse their culinary mastery into each creation. Our commitment to quality and
-          tradition ensures that every bite encapsulates the rich flavors and cultural essence of Africa.
-        </p>
+      </nav>
+      <div class="sec1">
+        <div class="htext">
+          <h1 class="hmain">About us</h1>
+          <p class="hsec">
+            Welcome to Africulinary Delights, your ultimate destination for authentic African pastries crafted with passion and
+            expertise. We take immense pride in curating a delectable assortment of pastries, working hand-in-hand with the
+            world's top chefs who infuse their culinary mastery into each creation. Our commitment to quality and tradition
+            ensures that every bite encapsulates the rich flavors and cultural essence of Africa.
+          </p>
+        </div>
+        <div>
+          <img src="../images/team1.jpg" alt="Three chefs standing in a kitchen" class="head-img" />
+        </div>
       </div>
-      <div>
-        <img src="../images/team1.jpg" alt="Three chefs standing in a kitchen" class="head-img" />
-      </div>
-    </div>
-  </header>
-  <main>
+    </header>
+    <main>
       <h2 class="main-header">Our Team</h2>
       <div class="abt">
         <h3 class="team-name">Zara Nkosi</h3>
-      <div>
-        <img src="../images/team2.jpg" alt="chef holding a pastry in the kitchen" />
+        <div>
+          <img src="../images/team2.jpg" alt="chef holding a pastry in the kitchen" />
+        </div>
+        <div class="abt-text">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean luctus interdum lectus. Morbi interdum, urna nec
+            consectetur elementum, nulla sem suscipit tortor, eu congue neque nulla hendrerit elit. Nullam nec massa lobortis,
+            consequat nibh vitae, ornare sem. Nam odio felis, varius placerat ligula nec, suscipit dignissim magna. Quisque
+            facilisis aliquet mollis. Sed convallis ante enim, in laoreet quam dictum sed. Integer at porta nibh, non finibus
+            eros. Quisque cursus ac est ut rutrum. Vestibulum non malesuada mi, sit amet sagittis mi.
+          </p>
+        </div>
       </div>
-      <div class="abt-text">
-        <p >
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean luctus
-          interdum lectus. Morbi interdum, urna nec consectetur elementum, nulla
-          sem suscipit tortor, eu congue neque nulla hendrerit elit. Nullam nec
-          massa lobortis, consequat nibh vitae, ornare sem. Nam odio felis, varius
-          placerat ligula nec, suscipit dignissim magna. Quisque facilisis aliquet
-          mollis. Sed convallis ante enim, in laoreet quam dictum sed. Integer at
-          porta nibh, non finibus eros. Quisque cursus ac est ut rutrum. Vestibulum
-          non malesuada mi, sit amet sagittis mi.
-        </p>
+      <div class="abt">
+        <h3 class="team-name">Jabari Chibueze</h3>
+        <div>
+          <img src="../images/team3.jpg" alt="chef holding a pastry in the kitchen" />
+        </div>
+        <div class="abt-text">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean luctus interdum lectus. Morbi interdum, urna nec
+            consectetur elementum, nulla sem suscipit tortor, eu congue neque nulla hendrerit elit. Nullam nec massa lobortis,
+            consequat nibh vitae, ornare sem. Nam odio felis, varius placerat ligula nec, suscipit dignissim magna. Quisque
+            facilisis aliquet mollis. Sed convallis ante enim, in laoreet quam dictum sed. Integer at porta nibh, non finibus
+            eros. Quisque cursus ac est ut rutrum. Vestibulum non malesuada mi, sit amet sagittis mi.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="abt">
-      <h3 class="team-name">Jabari Chibueze</h3>
-      <div>
-        <img src="../images/team3.jpg" alt="chef holding a pastry in the kitchen" />
+      <div class="abt">
+        <h3 class="team-name">Kwame Osei</h3>
+        <div>
+          <img src="../images/team4.jpg" alt="chef holding a pastry in the kitchen" />
+        </div>
+        <div class="abt-text">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean luctus interdum lectus. Morbi interdum, urna nec
+            consectetur elementum, nulla sem suscipit tortor, eu congue neque nulla hendrerit elit. Nullam nec massa lobortis,
+            consequat nibh vitae, ornare sem. Nam odio felis, varius placerat ligula nec, suscipit dignissim magna. Quisque
+            facilisis aliquet mollis. Sed convallis ante enim, in laoreet quam dictum sed. Integer at porta nibh, non finibus
+            eros. Quisque cursus ac est ut rutrum. Vestibulum non malesuada mi, sit amet sagittis mi.
+          </p>
+        </div>
       </div>
-      <div class="abt-text">
-        <p >
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean luctus
-          interdum lectus. Morbi interdum, urna nec consectetur elementum, nulla
-          sem suscipit tortor, eu congue neque nulla hendrerit elit. Nullam nec
-          massa lobortis, consequat nibh vitae, ornare sem. Nam odio felis, varius
-          placerat ligula nec, suscipit dignissim magna. Quisque facilisis aliquet
-          mollis. Sed convallis ante enim, in laoreet quam dictum sed. Integer at
-          porta nibh, non finibus eros. Quisque cursus ac est ut rutrum. Vestibulum
-          non malesuada mi, sit amet sagittis mi.
-        </p>
-      </div>
-    </div>
-    <div class="abt">
-      <h3 class="team-name">Kwame Osei</h3>
-      <div>
-        <img src="../images/team4.jpg" alt="chef holding a pastry in the kitchen" />
-      </div>
-      <div class="abt-text">
-        <p >
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean luctus
-          interdum lectus. Morbi interdum, urna nec consectetur elementum, nulla
-          sem suscipit tortor, eu congue neque nulla hendrerit elit. Nullam nec
-          massa lobortis, consequat nibh vitae, ornare sem. Nam odio felis, varius
-          placerat ligula nec, suscipit dignissim magna. Quisque facilisis aliquet
-          mollis. Sed convallis ante enim, in laoreet quam dictum sed. Integer at
-          porta nibh, non finibus eros. Quisque cursus ac est ut rutrum. Vestibulum
-          non malesuada mi, sit amet sagittis mi.
-        </p>
-      </div>
-    </div>
-  </main>
-  <footer>
-    <a href="#coDet">
-      <em>Back to Top</em>
-    </a>
-    <p>
-      Authors: <em>
-      Amr Mohamed | Ashish Augustine | Jo Daniels |
-      Ruslan Rezunenko | Yousef Arrafat</em>
-    </p>
-    <p>A Bite of Africa® | Copyright©</p>
-  </footer>
-</body>
+    </main>
+    <footer>
+      <a href="#coDet">
+        <em>Back to Top</em>
+      </a>
+      <p>Authors: <em> Amr Mohamed | Ashish Augustine | Jo Daniels | Ruslan Rezunenko | Yousef Arrafat</em></p>
+      <p>A Bite of Africa® | Copyright©</p>
+    </footer>
+  </body>
 </html>
