Updated footer on all pages
Updated footer on all pages:
Format as per index;
Link to full project

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </a>
       <p>Authors: <em> Amr R. Mohamed | Ashish Augustine | Jo Daniels | Ruslan Rezunenko | Yousef Raafat</em></p>
       <p>To view the full project, click 
-        <a href="https://github.com/arsmohamed/kreativestorm-tasks">
+        <a href="https://github.com/arsmohamed/kreativestorm-tasks" target="_blank">
           <em>here</em>
         </a>
       </p>
