--- a/pages/about.html
+++ b/pages/about.html
@@ -89,7 +89,12 @@
       <a href="#coDet">
         <em>Back to Top</em>
       </a>
-      <p>Authors: <em> Amr Mohamed | Ashish Augustine | Jo Daniels | Ruslan Rezunenko | Yousef Arrafat</em></p>
+      <p>Authors: <em> Amr R. Mohamed | Ashish Augustine | Jo Daniels | Ruslan Rezunenko | Yousef Raafat</em></p>
+      <p>To view the full project, click 
+        <a href="https://github.com/arsmohamed/kreativestorm-tasks" target="_blank">
+          <em>here</em>
+        </a>
+      </p>
       <p>A Bite of Africa® | Copyright©</p>
     </footer>
   </body>
