Linking Pages Updated
All nav checked to link to corresponding pages.
All CSS uniform accross all pages (no conflicts)

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -18,13 +18,13 @@
               width="75px"
             />
           </a>
-          <p>A Bite of Africa</p>
+          <p>A Bite of Africa</p> 
         </div>
         <div class="navList">
           <a href="./about.html">About Us</a>
           <a href="./products.html">Pastry Shop</a>
           <a href="./blog.html">Pastry Blog </a>
-          <a href="#">Contact Us</a>  
+          <a href="https://github.com/arsmohamed/kreativestorm-tasks" target="_blank">Contact Us</a>  
         </div> 
       </nav>
         <div class="sec1">
