--- a/pages/about.html
+++ b/pages/about.html
@@ -19,7 +19,7 @@
           <a href="./about.html">About Us</a>
           <a href="./products.html">Pastry Shop</a>
           <a href="./blog.html">Pastry Blog </a>
-          <a href="#">Contact Us</a>
+          <a href="https://github.com/arsmohamed/kreativestorm-tasks" target="_blank">Contact Us</a>
         </div>
       </nav>
       <div class="sec1">
