--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <header>
-      <!--Jo - Header Section Top Nav-->
       <nav>
         <div id="coDet">
           <a href="./index.html">
@@ -23,7 +22,6 @@
           <a href="https://github.com/arsmohamed/kreativestorm-tasks" target="_blank">Contact Us</a>
         </div>
       </nav>
-      <!--Ruslan - Header Section-->
       <div class="sec1">
         <div class="htext">
           <h1 class="hmain">This website is awesome</h1>
@@ -40,21 +38,19 @@
       </div>
     </header>
     <main>
-      <!--Ashish Augustine - Quote Section - Italics-->
       <section class="quote">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
         aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip labore commodo consequat.
         <div>-Thor</div>
       </section>
-      <!--Ashish Augustine - Quote Section - Italics-->
     </main>
-    <!--Jo - Footer Section-->
     <footer>
       <a href="#coDet">
         <em>Back to Top</em>
       </a>
       <p>Authors: <em> Amr R. Mohamed | Ashish Augustine | Jo Daniels | Ruslan Rezunenko | Yousef Raafat</em></p>
-      <p>To view the full project, click 
+      <p>
+        To view the full project, click
         <a href="https://github.com/arsmohamed/kreativestorm-tasks" target="_blank">
           <em>here</em>
         </a>
