--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A Bite of Africa</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
+    <style>
+      /* Styling the container */
+      .picture-list {
+          display: flex; /* Use flexbox to create a horizontal list */
+          justify-content: space-around; /* Distribute items evenly along the container */
+          list-style: none; /* Remove default list styles */
+          padding: 0;
+          margin: 10px 0; /* Margin top and bottom set to 10 pixels */
+      }
+      .random-info {
+        margin: 30px;
+        display: flex;
+        justify-content: center;
+      }
+      /* Styling each list item (picture with text) */
+      .picture-item {
+          text-align: center;
+          max-width: 250px;
+      }
+
+      /* Styling the images */
+      .picture-item img {
+          width: 100%;
+          height: 50%;
+          border-radius: 10px;
+          margin-bottom: 10px; /* Space between the image and text */
+      }
+  </style>
   </head>
   <body>
     <header>
@@ -43,6 +71,34 @@
         aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip labore commodo consequat.
         <div>-Thor</div>
       </section>
+      <h1 class="random-info">Some Random Information.</h1>
+
+      <ul class="picture-list">
+        <li class="picture-item">
+                <img src="./images/1.png" alt="Picture 1">
+            <p>
+                A beautiful mountain landscape. The serene view of snow-capped peaks surrounded by lush green forests is truly breathtaking.
+            </p>
+        </li>
+        <li class="picture-item">
+                <img src="./images/2.jpg" alt="Picture 2">
+            <p>
+                A stunning sunset over the ocean. The vibrant hues of orange and pink reflect on the water, creating a mesmerizing scene.
+            </p>
+        </li>
+        <li class="picture-item">
+                <img src="./images/3.jpg" alt="Picture 3">
+            <p>
+                A dense and enchanting forest. The tall trees and sunlight filtering through the leaves create a magical atmosphere.
+            </p>
+        </li>
+        <li class="picture-item">
+                <img src="./images/4.jpg" alt="Picture 4">
+            <p>
+                A peaceful lake surrounded by mountains. The mirror-like surface reflects the surrounding nature, offering a moment of tranquility.
+            </p>
+        </li>
+    </ul>
     </main>
     <footer>
       <a href="#coDet">
