Call to action is done

--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
             </p>
         </li>
     </ul>
+
+    <section class="callToAction">
+      <div>
+        <h1>Call to action! it's time!</h1>
+        <p>Sign up for our product by clicking that button right over there!</p>
+      </div>
+      <a  id="callToActionBTN" href="">Sign up</a>
+    </section>
+
     </main>
     <footer>
       <a href="#coDet">
