--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <style>
       /* Styling the container */
       .picture-list {
-          display: flex; /* Use flexbox to create a horizontal list */
-          justify-content: space-around; /* Distribute items evenly along the container */
-          list-style: none; /* Remove default list styles */
-          padding: 0;
-          margin: 10px 0; /* Margin top and bottom set to 10 pixels */
+        display: flex; /* Use flexbox to create a horizontal list */
+        justify-content: space-around; /* Distribute items evenly along the container */
+        list-style: none; /* Remove default list styles */
+        padding: 0;
+        margin: 10px 0; /* Margin top and bottom set to 10 pixels */
       }
       .random-info {
         margin: 30px;
@@ -21,18 +21,18 @@
       }
       /* Styling each list item (picture with text) */
       .picture-item {
-          text-align: center;
-          max-width: 250px;
+        text-align: center;
+        max-width: 250px;
       }
 
       /* Styling the images */
       .picture-item img {
-          width: 100%;
-          height: 50%;
-          border-radius: 10px;
-          margin-bottom: 10px; /* Space between the image and text */
+        width: 100%;
+        height: 50%;
+        border-radius: 10px;
+        margin-bottom: 10px; /* Space between the image and text */
       }
-  </style>
+    </style>
   </head>
   <body>
     <header>
@@ -66,48 +66,51 @@
       </div>
     </header>
     <main>
+      <h1 class="random-info">Some Random Information.</h1>
+
+      <ul class="picture-list">
+        <li class="picture-item">
+          <img src="./images/1.png" alt="Picture 1" />
+          <p>
+            A beautiful mountain landscape. The serene view of snow-capped peaks surrounded by lush green forests is truly
+            breathtaking.
+          </p>
+        </li>
+        <li class="picture-item">
+          <img src="./images/2.jpg" alt="Picture 2" />
+          <p>
+            A stunning sunset over the ocean. The vibrant hues of orange and pink reflect on the water, creating a mesmerizing
+            scene.
+          </p>
+        </li>
+        <li class="picture-item">
+          <img src="./images/3.jpg" alt="Picture 3" />
+          <p>
+            A dense and enchanting forest. The tall trees and sunlight filtering through the leaves create a magical atmosphere.
+          </p>
+        </li>
+        <li class="picture-item">
+          <img src="./images/4.jpg" alt="Picture 4" />
+          <p>
+            A peaceful lake surrounded by mountains. The mirror-like surface reflects the surrounding nature, offering a moment of
+            tranquility.
+          </p>
+        </li>
+      </ul>
+
       <section class="quote">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
         aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip labore commodo consequat.
         <div>-Thor</div>
       </section>
-      <h1 class="random-info">Some Random Information.</h1>
 
-      <ul class="picture-list">
-        <li class="picture-item">
-                <img src="./images/1.png" alt="Picture 1">
-            <p>
-                A beautiful mountain landscape. The serene view of snow-capped peaks surrounded by lush green forests is truly breathtaking.
-            </p>
-        </li>
-        <li class="picture-item">
-                <img src="./images/2.jpg" alt="Picture 2">
-            <p>
-                A stunning sunset over the ocean. The vibrant hues of orange and pink reflect on the water, creating a mesmerizing scene.
-            </p>
-        </li>
-        <li class="picture-item">
-                <img src="./images/3.jpg" alt="Picture 3">
-            <p>
-                A dense and enchanting forest. The tall trees and sunlight filtering through the leaves create a magical atmosphere.
-            </p>
-        </li>
-        <li class="picture-item">
-                <img src="./images/4.jpg" alt="Picture 4">
-            <p>
-                A peaceful lake surrounded by mountains. The mirror-like surface reflects the surrounding nature, offering a moment of tranquility.
-            </p>
-        </li>
-    </ul>
-
-    <section class="callToAction">
-      <div>
-        <h1>Call to action! it's time!</h1>
-        <p>Sign up for our product by clicking that button right over there!</p>
-      </div>
-      <a  id="callToActionBTN" href="">Sign up</a>
-    </section>
-
+      <section class="callToAction">
+        <div>
+          <h1>Call to action! it's time!</h1>
+          <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <a id="callToActionBTN" href="">Sign up</a>
+      </section>
     </main>
     <footer>
       <a href="#coDet">
