randominfo margin set top & bottom

--- a/index.html
+++ b/index.html
@@ -66,41 +66,42 @@
       </div>
     </header>
     <main>
-      <h1 class="random-info">Some Random Information.</h1>
+      <section class="randominfo">
+        <h1 class="random-info">Some Random Information.</h1>
 
-      <ul class="picture-list">
-        <li class="picture-item">
-          <img src="./images/1.png" alt="Picture 1" />
-          <p>
-            A beautiful mountain landscape. The serene view of snow-capped peaks surrounded by lush green forests is truly
-            breathtaking.
-          </p>
-        </li>
-        <li class="picture-item">
-          <img src="./images/2.jpg" alt="Picture 2" />
-          <p>
-            A stunning sunset over the ocean. The vibrant hues of orange and pink reflect on the water, creating a mesmerizing
-            scene.
-          </p>
-        </li>
-        <li class="picture-item">
-          <img src="./images/3.jpg" alt="Picture 3" />
-          <p>
-            A dense and enchanting forest. The tall trees and sunlight filtering through the leaves create a magical atmosphere.
-          </p>
-        </li>
-        <li class="picture-item">
-          <img src="./images/4.jpg" alt="Picture 4" />
-          <p>
-            A peaceful lake surrounded by mountains. The mirror-like surface reflects the surrounding nature, offering a moment of
-            tranquility.
-          </p>
-        </li>
-      </ul>
-
+        <ul class="picture-list">
+          <li class="picture-item">
+            <img src="./images/1.png" alt="Picture 1" />
+            <p>
+              A beautiful mountain landscape. The serene view of snow-capped peaks surrounded by lush green forests is truly
+              breathtaking.
+            </p>
+          </li>
+          <li class="picture-item">
+            <img src="./images/2.jpg" alt="Picture 2" />
+            <p>
+              A stunning sunset over the ocean. The vibrant hues of orange and pink reflect on the water, creating a mesmerizing
+              scene.
+            </p>
+          </li>
+          <li class="picture-item">
+            <img src="./images/3.jpg" alt="Picture 3" />
+            <p>
+              A dense and enchanting forest. The tall trees and sunlight filtering through the leaves create a magical atmosphere.
+            </p>
+          </li>
+          <li class="picture-item">
+            <img src="./images/4.jpg" alt="Picture 4" />
+            <p>
+              A peaceful lake surrounded by mountains. The mirror-like surface reflects the surrounding nature, offering a moment
+              of tranquility.
+            </p>
+          </li>
+        </ul>
+      </section>
       <section class="quote">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip labore commodo consequat.
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco labore.
         <div>-Thor</div>
       </section>
 
