--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       }
       /* Styling each list item (picture with text) */
       .picture-item {
-        text-align: center;
+        text-align: justify;
         max-width: 250px;
       }
 
@@ -70,35 +70,36 @@
       <section class="randominfo">
         <h1 class="random-info">Some Random Information.</h1>
 
-        <ul class="picture-list">
-          <li class="picture-item">
-            <img src="./images/1.png" alt="Picture 1" />
+      <ul class="picture-list">
+        <li class="picture-item">
+                <img src="./images/1.jpg" alt="Picture 1">
             <p>
-              A beautiful mountain landscape. The serene view of snow-capped peaks surrounded by lush green forests is truly
-              breathtaking.
+              Wadi Mujib is lesser known than Wadi Rum, but is spectacular in its own way. Located in the lower part of the Wadi Mujib River, 
+              the slot canyon is impressive in its own way. The river becomes so tight that it’s only a few meters wide.
             </p>
-          </li>
-          <li class="picture-item">
-            <img src="./images/2.jpg" alt="Picture 2" />
+        </li>
+        <li class="picture-item">
+                <img src="./images/2.jpg" alt="Picture 2">
             <p>
-              A stunning sunset over the ocean. The vibrant hues of orange and pink reflect on the water, creating a mesmerizing
-              scene.
+              Now, you can explore the grottoes 
+              by taking a pathway through the twists and turns admiring the formations while listening and watching the sea crash through the passageways.
             </p>
-          </li>
-          <li class="picture-item">
-            <img src="./images/3.jpg" alt="Picture 3" />
+        </li>
+        <li class="picture-item">
+                <img src="./images/3.jpg" alt="Picture 3">
             <p>
-              A dense and enchanting forest. The tall trees and sunlight filtering through the leaves create a magical atmosphere.
+              The Siwa oasis is one of the most amazing natural wonders in Egypt. After driving through hundreds of kilometers of dry desert, 
+              you would never expect to find such clear, turquoise pools, which look like they are out of a movie.
             </p>
-          </li>
-          <li class="picture-item">
-            <img src="./images/4.jpg" alt="Picture 4" />
+        </li>
+        <li class="picture-item">
+                <img src="./images/4.jpg" alt="Picture 4">
             <p>
-              A peaceful lake surrounded by mountains. The mirror-like surface reflects the surrounding nature, offering a moment
-              of tranquility.
+              The Baatara waterfall, also called “the Cave of the Three Bridges” is one of the most famous natural wonders of Lebanon. 
+              Geologists say that the waterfall has existed for over 160 million years.
             </p>
-          </li>
-        </ul>
+        </li>
+    </ul>
       </section>
       <section class="quote">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
