--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       <nav>
         <div id="coDet">
           <a href="./index.html">
-            <img id="logo" src="./images/Logo.jgp" alt="logo depicting Africa with a bite out 
-of it" width="75px" />
+            <img id="logo" src="./images/Logo.jgp" alt="logo depicting Africa with a bite out of it" width="75px" />
           </a>
           <p>A Bite of Africa</p>
         </div>
@@ -71,36 +70,37 @@ of it" width="75px" />
       <section class="randominfo">
         <h1 class="random-info">Some Random Information.</h1>
 
-      <ul class="picture-list">
-        <li class="picture-item">
-                <img src="./images/1.jpg" alt="Picture 1">
+        <ul class="picture-list">
+          <li class="picture-item">
+            <img src="./images/1.jpg" alt="Picture 1" />
             <p>
-              Wadi Mujib is lesser known than Wadi Rum, but is spectacular in its own way. Located in the lower part of the Wadi Mujib River, 
-              the slot canyon is impressive in its own way. The river becomes so tight that it’s only a few meters wide.
+              Wadi Mujib is lesser known than Wadi Rum, but is spectacular in its own way. Located in the lower part of the Wadi
+              Mujib River, the slot canyon is impressive in its own way. The river becomes so tight that it’s only a few meters
+              wide.
             </p>
-        </li>
-        <li class="picture-item">
-                <img src="./images/2.jpg" alt="Picture 2">
+          </li>
+          <li class="picture-item">
+            <img src="./images/2.jpg" alt="Picture 2" />
             <p>
-              Now, you can explore the grottoes 
-              by taking a pathway through the twists and turns admiring the formations while listening and watching the sea crash through the passageways.
+              Now, you can explore the grottoes by taking a pathway through the twists and turns admiring the formations while
+              listening and watching the sea crash through the passageways.
             </p>
-        </li>
-        <li class="picture-item">
-                <img src="./images/3.jpg" alt="Picture 3">
+          </li>
+          <li class="picture-item">
+            <img src="./images/3.jpg" alt="Picture 3" />
             <p>
-              The Siwa oasis is one of the most amazing natural wonders in Egypt. After driving through hundreds of kilometers of dry desert, 
-              you would never expect to find such clear, turquoise pools, which look like they are out of a movie.
+              The Siwa oasis is one of the most amazing natural wonders in Egypt. After driving through hundreds of kilometers of
+              dry desert, you would never expect to find such clear, turquoise pools, which look like they are out of a movie.
             </p>
-        </li>
-        <li class="picture-item">
-                <img src="./images/4.jpg" alt="Picture 4">
+          </li>
+          <li class="picture-item">
+            <img src="./images/4.jpg" alt="Picture 4" />
             <p>
-              The Baatara waterfall, also called “the Cave of the Three Bridges” is one of the most famous natural wonders of Lebanon. 
-              Geologists say that the waterfall has existed for over 160 million years.
+              The Baatara waterfall, also called “the Cave of the Three Bridges” is one of the most famous natural wonders of
+              Lebanon. Geologists say that the waterfall has existed for over 160 million years.
             </p>
-        </li>
-    </ul>
+          </li>
+        </ul>
       </section>
       <section class="quote">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
