--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <nav>
         <div id="coDet">
           <a href="./index.html">
-            <img id="logo" src="./images/Logo.jgp" alt="logo depicting Africa with a bite out of it" width="75px" />
+            <img id="logo" src="./images/Logo.png" alt="logo depicting Africa with a bite out of it" width="75px" />
           </a>
           <p>A Bite of Africa</p>
         </div>
